@@ -3,6 +3,7 @@
 	* src/lib/ggz/chess.py: Fix crash decoding empty GGZ strings (Bug #530579)
 	* src/lib/chess/pgn.py: Handle unknown tokens (Bug #526252)
 	* src/lib/main.py: Correctly catch and display PGN errors
+	* src/lib/gtkui/gtkui.py, src/lib/display.py: Show dialog if unable to claim draw (Bug #515542)
 
 2008-04-13  Robert Ancell  <robert.ancell@gmail.com>
 
